cmake_minimum_required(VERSION 3.10.0)

project(datastruct)

add_definitions(-std=c++11)

set(CMAKE_CXX_STANDARD 11)

SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")  

include_directories(${PROJECT_SOURCE_DIR}/sequencestruct . )

add_subdirectory(sequencestruct)
add_subdirectory(Tree)
add_subdirectory(sort)
